@@ -1,1 +1,1 @@
-0.1.0 (SVN/Unreleased)
+0.1.2 (SVN/Unreleased)
