@@ -1,0 +1,2 @@
+[default]
+cache=HTTPCache
